force-app/main/default/objects/Trainee__c/Trainee__c.object-meta.xml
<CustomObject>
    <description>トレーニング支援を受ける利用者を管理するオブジェクト。標準Userとは分けて、筋トレ支援に必要なプロフィール情報を保持する。</description>
    <label>利用者</label>
    <nameField><label>利用者名</label><type>Text</type></nameField>
    <pluralLabel>利用者</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>