force-app/main/default/objects/Trainee__c/fields/DesiredWeeklyFrequency__c.field-meta.xml
<CustomField><fullName>DesiredWeeklyFrequency__c</fullName><label>週あたり希望回数</label><precision>2</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>