force-app/main/default/objects/Trainee__c/fields/FitnessLevel__c.field-meta.xml
<CustomField><fullName>FitnessLevel__c</fullName><label>運動レベル</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>初心者</fullName><default>false</default><label>初心者</label></value><value><fullName>初級</fullName><default>false</default><label>初級</label></value><value><fullName>中級</fullName><default>false</default><label>中級</label></value></valueSetDefinition></valueSet></CustomField>