force-app/main/default/objects/Trainee__c/fields/Nickname__c.field-meta.xml
<CustomField><fullName>Nickname__c</fullName><externalId>false</externalId><label>ニックネーム</label><length>80</length><required>false</required><type>Text</type><unique>false</unique></CustomField>