force-app/main/default/objects/Trainee__c/fields/SalesforceUser__c.field-meta.xml
<CustomField><fullName>SalesforceUser__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>現在ログインしているSalesforceユーザーと利用者レコードを紐づける</description><label>紐づくSalesforceユーザー</label><referenceTo>User</referenceTo><relationshipLabel>利用者</relationshipLabel><relationshipName>Trainees</relationshipName><required>false</required><type>Lookup</type></CustomField>