force-app/main/default/objects/Trainee__c/fields/StartDate__c.field-meta.xml
<CustomField><fullName>StartDate__c</fullName><label>利用開始日</label><required>false</required><type>Date</type></CustomField>