force-app/main/default/objects/Trainee__c/fields/TotalWorkoutCount__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkoutCount__c</fullName>
    <description>利用者に紐づく全期間のトレーニング実績件数を保持し、累計状況を標準機能で参照できるようにする。</description>
    <inlineHelpText>利用者に登録された全トレーニング実績の件数が自動集計されます。</inlineHelpText>
    <label>累計トレーニング回数</label>
    <summaryForeignKey>WorkoutSession__c.Trainee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>