force-app/main/default/objects/Trainee__c/fields/TotalWorkoutMinutes__c.field-meta.xml
<CustomField>
    <fullName>TotalWorkoutMinutes__c</fullName>
    <description>利用者に紐づく全期間のトレーニング時間合計を保持し、累計の運動量を標準機能で参照できるようにする。</description>
    <inlineHelpText>利用者に登録された全トレーニング実績の所要時間（分）が自動集計されます。</inlineHelpText>
    <label>累計トレーニング時間（分）</label>
    <summarizedField>WorkoutSession__c.DurationMinutes__c</summarizedField>
    <summaryForeignKey>WorkoutSession__c.Trainee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>